 cnp-nist-ac-3-3-limit-pod-ingress-81idnus.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-nist-ac-3-3-limit-pod-ingress-ng66216
  namespace: kube-system
spec:
  description: "After applying the policy, This pod only allow connections from inside Namespace"
  endpointSelector:
    matchLabels:
      k8s-app: cilium
      pod-template-generation: 1
      controller-revision-hash: 7b445dc7b4
  ingress:
    - fromEndpoints:
        - {}
